# FuzzyLib

./: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  FuzzyRelation.cpp  FuzzyRelation.hpp  FuzzySet.cpp  FuzzySet.hpp
